# riverdi-lvgl-twerd-template

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manifest.json  port_eez_ui.py
CM4/Core/Inc/: main.h  stm32h7xx_hal_conf.h
CM4/Core/Src/: i2c.c  lvgl_port_display.c  lvgl_port_touch.c  main.c  stm32h7xx_it.c
CM4/Core/Src/eez_ui/: ui.c  ui.h
CM7/Core/Src/: freertos.c  main.c
Common/: shared_memory.h
Docs/: Build_and_Flash_CLI.md  Project_Template_Architecture.drawio  Project_Template_Architecture.md  Session_Summary.md  UI_Architecture_Requirements.md  UI_Developing_Pipeline.md  Walkthrough.md
EEZ/Riverdi-template/: Riverdi-template.eez-project
EEZ/inverters-interface/: inverters-interface.eez-project  inverters-interface.eez-project-ui-state
STM32CubeIDE/CM4/: .cproject  .project
STM32CubeIDE/CM7/: .cproject  .project
pc_simulator/: CMakeLists.txt  main.c  pc_simulator_hw.c  sdl_port.c  sdl_port.h
